<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:gravity="center_vertical"
    android:paddingLeft="20dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fpt"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/imageView" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/custom_layout_login">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_dialog_map"
            android:layout_gravity="right"
            android:id="@+id/imgMaps"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_border_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginSystem"
                android:textStyle="bold"
                android:textSize="25dp"
                android:textColor="#FFFFFF"
                android:fontFamily="serif"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_textview_login"
                android:layout_marginTop="2dp"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_textview_login"
                android:layout_marginTop="2dp"
                android:inputType="textPassword"
                android:ems="10"
                android:textColor="#000000"/>
            <CheckBox
                android:id="@+id/cbRemb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember"
                android:textColor="#FFFFFF"
                android:layout_marginTop="2dp"
                android:textStyle="italic"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <Button
                    android:text="Login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/btnLogin"
                    android:background="@color/com_facebook_blue"
                    android:textColor="#FFFFFF"
                    android:layout_alignBottom="@+id/login_button" />


            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
